# blogverse-app

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  test_follow.sh
.cargo/: config.toml
bruno-collection/: README.md  bruno.json  collection.bru
bruno-collection/Auth/: Forgot Password.bru  Get Me.bru  Resend Verification.bru  Reset Password.bru  Sign In.bru  Sign Up.bru  Verify Email.bru
bruno-collection/Comments/: Clap Comment.bru  Create Comment.bru  Create Reply.bru  Delete Comment.bru  Get Comment Replies.bru  Get Comment.bru  Get Story Comments.bru  Update Comment.bru
bruno-collection/Feed/: Following Feed.bru
bruno-collection/Follows/: Bulk Follow Status.bru  Check Is Following.bru  Follow User.bru  Get Follow Suggestions.bru  Get Followers.bru  Get Following.bru  Get User Profile.bru  Unfollow User.bru
bruno-collection/Stories/: Clap Story.bru  Create Story.bru  Delete Story.bru  Get Feed.bru  Get Story By Slug.bru  Update Story.bru
bruno-collection/Tags/: Get Tags.bru
bruno-collection/Users/: Get User By ID.bru
bruno-collection/environments/: Local.bru
docs/: prd.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20260114120000_create_users_table.sql  20260114130000_create_stories_tables.sql  20260116140000_add_email_verification.sql  20260118130000_create_comments_table.sql  20260118134800_create_follows_table.sql  20260119100000_add_follow_counts_and_triggers.sql
src/: email.rs  error.rs  main.rs  response.rs
src/auth/: handler.rs  jwt.rs  mod.rs  utils.rs
src/comments/: handler.rs  mod.rs
src/config/: settings.rs
src/follows/: handler.rs  mod.rs
src/handlers/: auth.rs  health.rs
src/models/: user.rs
src/routes/: mod.rs
(+5 files in other folders)
