[package]
name = "blogverse-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
sea-orm = { version = "0.12.15", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
