[package]
name = "blogverse-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
axum = { version = "0.7.5", features = ["json", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
slug = "0.1.6"
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
