[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies.sea-orm-migration]
version = "0.12"
features = [
  # Enable the PostgreSQL driver and async runtime
  "runtime-actix-rustls",  # ASYNC_RUNTIME feature (matching your main app)
  "sqlx-postgres",         # DATABASE_DRIVER feature for PostgreSQL
]

[[bin]]
name = "migration"
path = "src/main.rs"
